Update package.html documentation

--- a/components/scifio-devel/src/ome/scifio/common/package.html
+++ b/components/scifio-devel/src/ome/scifio/common/package.html
@@ -35,6 +35,5 @@
   -->
 
 <html><body>
-<b>LOCI Common</b>: a library of useful shared functions
-including I/O and data manipulation.
+<b>SCIFIO Common</b>: a library of useful shared functions.
 </body></html>
