Fix autogeneration to match renamed format pages
This includes a few page renames, as some of the longer names were not
shortened appropriately.

--- a/components/autogen/src/doc/FormatTable.vm
+++ b/components/autogen/src/doc/FormatTable.vm
@@ -80,8 +80,8 @@ Bio-Formats currently supports **$count** formats
 
     SCIFIO 
         This indicates whether format is supported by the 
-        :doc:`SCIFIO <software-scifio>` core library (See the license section 
-        on the :doc:`Bio-Formats documentation </index>` page for why this 
+        :doc:`SCIFIO <users/scifio>` core library (See the license section 
+        on the :doc:`Bio-Formats documentation <index>` page for why this 
         matters).
 
 .. toctree::
@@ -89,4 +89,4 @@ Bio-Formats currently supports **$count** formats
     :glob:
     :hidden:
 
-    bio-formats-format*
+    formats/*
