Create Formats page including supported formats in the toctree
- Modify format table auto-generation to list all format pages instead
of globbing

--- a/components/autogen/src/doc/FormatTable.vm
+++ b/components/autogen/src/doc/FormatTable.vm
@@ -89,4 +89,6 @@ Bio-Formats currently supports **$count** formats
     :glob:
     :hidden:
 
-    formats/*
+#foreach ($format in $formats)
+    $format.get("pagename")
+#end
