--- a/components/autogen/src/doc/FormatTable.vm
+++ b/components/autogen/src/doc/FormatTable.vm
@@ -1,6 +1,8 @@
 Supported Formats
 -----------------
 
+:term:`Legend`
+
 .. tabularcolumns:: |p{3cm}|p{2cm}|c|c|c|c|c|c|c|
 
 .. list-table::
@@ -42,6 +44,20 @@ Supported Formats
 Bio-Formats currently supports **$count** formats
 
 .. glossary::
+    Legend
+      +----------------+-----------------------+
+      +================+=======================+
+      | |Outstanding|  | Outstanding           |
+      +----------------+-----------------------+
+      | |Very good|    | Very good             |
+      +----------------+-----------------------+
+      | |Good|         | Good                  |
+      +----------------+-----------------------+
+      | |Fair|         | Fair                  |
+      +----------------+-----------------------+
+      | |Poor|         | Poor                  |
+      +----------------+-----------------------+
+
     Pixels
         Our estimation of Bio-Formats' ability to reliably extract complete 
         and accurate pixel values from files in that format. The better this 
