--- a/components/autogen/src/doc/FormatTable.vm
+++ b/components/autogen/src/doc/FormatTable.vm
@@ -1,7 +1,7 @@
 Supported Formats
 -----------------
 
-:term:`Legend`
+:term:`Ratings legend`
 
 .. tabularcolumns:: |p{3cm}|p{2cm}|c|c|c|c|c|c|c|
 
@@ -44,7 +44,7 @@ Supported Formats
 Bio-Formats currently supports **$count** formats
 
 .. glossary::
-    Legend
+    Ratings legend
       +----------------+-----------------------+
       +================+=======================+
       | |Outstanding|  | Outstanding           |
