supported-formats.txt: add note about sorting
This adds a note (to the HTML version only) that you can sort by any of
the columns by clicking on its header.

Thanks to Helen Flynn for the suggestion.

--- a/components/autogen/src/doc/FormatTable.vm
+++ b/components/autogen/src/doc/FormatTable.vm
@@ -3,6 +3,10 @@ Supported Formats
 
 :term:`Ratings legend and definitions`
 
+.. only:: html
+
+    You can sort this table by clicking on any of the headings.
+
 .. tabularcolumns:: |p{3cm}|p{2cm}|c|c|c|c|c|c|c|
 
 .. list-table::
