--- a/components/autogen/src/doc/meta-summary.vm
+++ b/components/autogen/src/doc/meta-summary.vm
@@ -4,6 +4,10 @@ Summary of supported metadata fields
 Format readers
 --------------
 
+.. only:: html
+
+    You can sort this table by clicking on any of the headings.
+
 .. tabularcolumns:: |p{3cm}|c|c|c|c|
 
 .. list-table::
@@ -37,6 +41,10 @@ Format readers
 
 Metadata fields
 ---------------
+
+.. only:: html
+
+    You can sort this table by clicking on any of the headings.
 
 .. tabularcolumns:: |p{3cm}|c|c|c|c|
 
